实现简单登录注册

--- a/views/web/layouts/footer.html
+++ b/views/web/layouts/footer.html
@@ -11,6 +11,7 @@
 </footer>
 
 <!-- Scripts -->
-{{{ "static/js/app.js" | assets_css }}}
+{{{ "static/js/jquery.min.js" | assets_js }}}
+{{{ "static/js/index.js" | assets_js }}}
 </body>
 </html>
