--- a/views/web/layouts/header.html
+++ b/views/web/layouts/header.html
@@ -9,9 +9,10 @@
     <meta name="csrf-token" content="{{{ .token }}}">
 
     <title>{{{ config.title }}}</title>
+    <link rel="icon" href="/static/images/favicon.ico">
 
     <!-- Styles -->
-    {{{ "static/css/app.css" | assets_css }}}
+    {{{ "static/css/index.css" | assets_css }}}
 </head>
 <body>
 
@@ -42,7 +43,7 @@
             <!-- Right Side Of Navbar -->
             <ul class="nav navbar-nav navbar-right">
                 <!-- Authentication Links -->
-                {{{ if checkCk }}}
+                {{{ if .loginName }}}
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
                         <span class="user-avatar pull-left" style="margin-right:8px; margin-top:-5px;">
@@ -53,12 +54,7 @@
 
                     <ul class="dropdown-menu" role="menu">
                         <li>
-                                <a href="/logout" onclick="event.preventDefault();document.getElementById('logout-form').submit();">
-                            退出登录
-                        </a>
-
-                        <form id="logout-form" action="/logout" method="POST" style="display: none;">
-                        </form>
+                            <a href="/logout">退出登录</a>
                         </li>
                     </ul>
                 </li>
