--- a/views/web/auth/register.html
+++ b/views/web/auth/register.html
@@ -13,40 +13,22 @@
 
                             <div class="col-md-6">
                                     <input id="name" type="text" class="form-control" name="name" value="" required autofocus>
-
-                                {{{/* @if ($errors->has('name'))
-                                <span class="help-block">
-                                <strong>{{ $errors->first('name') }}</strong>
-                                </span>
-                                @endif*/}}}
                             </div>
                         </div>
 
-                        <div class="form-group{{ $errors->has('email') ? ' has-error' : '' }}">
+                        <div class="form-group">
                             <label for="email" class="col-md-4 control-label">E-Mail 地址</label>
 
                             <div class="col-md-6">
                                 <input id="email" type="email" class="form-control" name="email" value="" required>
-
-                                {{{/*@if ($errors->has('email'))
-                                <span class="help-block">
-                                <strong>{{ $errors->first('email') }}</strong>
-                                </span>
-                                @endif*/}}}
                             </div>
                         </div>
 
-                        <div class="form-group{{ $errors->has('password') ? ' has-error' : '' }}">
+                        <div class="form-group">
                             <label for="password" class="col-md-4 control-label">密 码</label>
 
                             <div class="col-md-6">
                                 <input id="password" type="password" class="form-control" name="password" required>
-
-                                {{{/*@if ($errors->has('password'))
-                                <span class="help-block">
-                                <strong>{{ $errors->first('password') }}</strong>
-                                </span>
-                                @endif*/}}}
                             </div>
                         </div>
 
@@ -58,21 +40,15 @@
                             </div>
                         </div>
 
-                        <div class="form-group {{ $errors->has('captcha') ? ' has-error' : '' }}">
+                        <!-- <div class="form-group">
                             <label for="captcha" class="col-md-4 control-label">验证码</label>
 
                             <div class="col-md-6">
                                 <input id="captcha" class="form-control" name="captcha" >
 
                                 <img class="thumbnail captcha" src="{{ captcha_src('flat') }}" onclick="this.src='/captcha/flat?'+Math.random()" title="点击图片重新获取验证码">
-
-                                {{{/*@if ($errors->has('captcha'))
-                                <span class="help-block">
-                                <strong>{{ $errors->first('captcha') }}</strong>
-                                </span>
-                                @endif*/}}}
                             </div>
-                        </div>
+                        </div> -->
 
                         <div class="form-group">
                             <div class="col-md-6 col-md-offset-4">
