--- a/views/web/layouts/header.html
+++ b/views/web/layouts/header.html
@@ -1,70 +1,74 @@
 <!DOCTYPE html>
-<html lang="{{{ config.lang }}}">
+        <html lang="{{{ config.lang }}}">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSRF Token -->
-    <meta name="csrf-token" content="{{{ .token }}}">
+        <meta name="csrf-token" content="{{{ .token }}}">
 
-    <title>{{{ config.title }}}</title>
+<title>{{{ config.title }}}</title>
     <link rel="icon" href="/static/images/favicon.ico">
 
     <!-- Styles -->
-    {{{ "static/css/index.css" | assets_css }}}
+{{{ "static/css/index.css" | assets_css }}}
 </head>
 <body>
 
 <nav class="navbar navbar-default navbar-static-top">
-    <div class="container">
-        <div class="navbar-header">
+<div class="container">
+    <div class="navbar-header">
 
-            <!-- Collapsed Hamburger -->
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#app-navbar-collapse">
-                <span class="sr-only">Toggle Navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+        <!-- Collapsed Hamburger -->
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#app-navbar-collapse">
+            <span class="sr-only">Toggle Navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
 
-            <!-- Branding Image -->
-            <a class="navbar-brand" href="/">
-                goBBS
-            </a>
-        </div>
-
-        <div class="collapse navbar-collapse" id="app-navbar-collapse">
-            <!-- Left Side Of Navbar -->
-            <ul class="nav navbar-nav">
-
-            </ul>
-
-            <!-- Right Side Of Navbar -->
-            <ul class="nav navbar-nav navbar-right">
-                <!-- Authentication Links -->
-                {{{ if .loginName }}}
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                        <span class="user-avatar pull-left" style="margin-right:8px; margin-top:-5px;">
-                            <img src="https://fsdhubcdn.phphub.org/uploads/images/201709/20/1/PtDKbASVcz.png?imageView2/1/w/60/h/60" class="img-responsive img-circle" width="30px" height="30px">
-                        </span>
-{{{ .username }}}<span class="caret"></span>
-                    </a>
-
-                    <ul class="dropdown-menu" role="menu">
-                        <li>
-                            <a href="/logout">退出登录</a>
-                        </li>
-                    </ul>
-                </li>
-{{{ else }}}
-                    <li><a href="/login">登录</a></li>
-                    <li><a href="/register">注册</a></li>
-{{{ end }}}
-            </ul>
-        </div>
+        <!-- Branding Image -->
+        <a class="navbar-brand" href="/">
+            goBBS
+        </a>
     </div>
+
+<div class="collapse navbar-collapse" id="app-navbar-collapse">
+    <!-- Left Side Of Navbar -->
+    <ul class="nav navbar-nav">
+
+    </ul>
+
+    <!-- Right Side Of Navbar -->
+<ul class="nav navbar-nav navbar-right">
+    <!-- Authentication Links -->
+{{{ if .uInfo }}}
+<li class="dropdown">
+<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    <span class="user-avatar pull-left" style="margin-right:8px; margin-top:-5px;">
+        <img src="
+        {{{ if .uInfo.avatar }}} {{{ .uInfo.avatar }}} {{{ else }}}
+            https://fsdhubcdn.phphub.org/uploads/images/201709/20/1/PtDKbASVcz.png?imageView2/1/w/60/h/60
+        {{{ end }}}"
+        class="img-responsive img-circle" width="30px" height="30px">
+    </span>
+{{{ .uInfo.name }}}<span class="caret"></span>
+</a>
+
+    <ul class="dropdown-menu" role="menu">
+        <li>
+            <a href="/logout">退出登录</a>
+        </li>
+    </ul>
+</li>
+{{{ else }}}
+    <li><a href="/login">登录</a></li>
+    <li><a href="/register">注册</a></li>
+{{{ end }}}
+</ul>
+</div>
+</div>
 </nav>
 
 <div id="app" class="page">
