成功实现发送邮件

--- a/views/web/layouts/footer.html
+++ b/views/web/layouts/footer.html
@@ -11,7 +11,9 @@
 </footer>
 
 <!-- Scripts -->
-{{{ "static/js/jquery.min.js" | assets_js }}}
-{{{ "static/js/index.js" | assets_js }}}
+{{{ "/static/js/jquery.min.js" | assets_js }}}
+{{{ "/static/js/common.js" | assets_js }}}
+{{{ "/static/js/layer/layer.js" | assets_js }}}
+{{{ "/static/js/index.js" | assets_js }}}
 </body>
 </html>
