--- a/views/web/auth/login.html
+++ b/views/web/auth/login.html
@@ -9,6 +9,7 @@
 
             <div class="panel-body">
                 <form class="form-horizontal" method="POST" action="/login">
+                    {{{ .xsrf_html }}}
                     <div class="form-group">
                         <label for="email" class="col-md-4 control-label">E-Mail Address</label>
 
@@ -50,7 +51,7 @@
                     <div class="form-group">
                         <div class="col-md-8 col-md-offset-4">
                             <button type="submit" class="btn btn-primary">Login</button>
-                            <a class="btn btn-link" href="/password/reset">Forgot Your Password?</a>
+                            <a class="btn btn-link" href="/password/forget">Forgot Your Password?</a>
                         </div>
                     </div>
                 </form>
