--- a/views/web/auth/register.html
+++ b/views/web/auth/register.html
@@ -8,7 +8,8 @@
 
                 <div class="panel-body">
                     <form class="form-horizontal" method="POST" action="/register">
-                        <div class="form-group">
+{{{ .xsrf_html }}}
+    <div class="form-group">
                             <label for="name" class="col-md-4 control-label">用户名</label>
 
                             <div class="col-md-6">
