--- a/views/web/auth/password/reset.html
+++ b/views/web/auth/password/reset.html
@@ -15,7 +15,7 @@
         <label for="email" class="col-md-4 control-label">E-Mail Address</label>
 
         <div class="col-md-6">
-            <input id="email" type="email" class="form-control" name="email" value="" required autofocus>
+            <input id="email" type="email" class="form-control" name="email" value="{{{.email}}}" required autofocus>
         </div>
     </div>
 
