登录模块完成

--- a/views/web/auth/register.html
+++ b/views/web/auth/register.html
@@ -7,7 +7,7 @@
                 <div class="panel-heading">用户注册</div>
 
                 <div class="panel-body">
-                    <form class="form-horizontal" method="POST" action="/register">
+                    <form class="form-horizontal formAjax" method="POST" action="/register">
 {{{ .xsrf_html }}}
     <div class="form-group">
                             <label for="name" class="col-md-4 control-label">用户名</label>
