--- a/views/web/auth/login.html
+++ b/views/web/auth/login.html
@@ -8,7 +8,7 @@
             <div class="panel-heading">Login</div>
 
             <div class="panel-body">
-                <form class="form-horizontal" method="POST" action="/login">
+                <form class="form-horizontal formAjax" method="POST" action="/login">
                     {{{ .xsrf_html }}}
                     <div class="form-group">
                         <label for="email" class="col-md-4 control-label">E-Mail Address</label>
