--- a/views/web/auth/password/reset.html
+++ b/views/web/auth/password/reset.html
@@ -8,7 +8,7 @@
     <div class="panel-heading">Reset Password</div>
 
 <div class="panel-body">
-<form class="form-horizontal" method="POST" action="/reset">
+<form class="form-horizontal formAjax" method="POST" action="/password/reset">
 {{{ .xsrf_html }}}
 
     <div class="form-group">
@@ -36,6 +36,7 @@
 
     <div class="form-group">
         <div class="col-md-6 col-md-offset-4">
+            <input type="hidden" name="token" value="{{{ .token }}}">
             <button type="submit" class="btn btn-primary">
                 Reset Password
             </button>
