--- a/views/web/layouts/header.html
+++ b/views/web/layouts/header.html
@@ -61,6 +61,9 @@
 
     <ul class="dropdown-menu" role="menu">
         <li>
+            <a href="/user/{{{ .uInfo.id }}}">个人中心</a>
+        </li>
+        <li>
             <a href="/logout">退出登录</a>
         </li>
     </ul>
