--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1631,6 +1631,10 @@ ol, ul {
     margin-bottom: 11px
 }
 
+ul li{
+    list-style-type:none;
+}
+
 ol ol, ol ul, ul ol, ul ul {
     margin-bottom: 0
 }
@@ -5456,73 +5460,6 @@ a.thumbnail.active, a.thumbnail:focus, a.thumbnail:hover {
     to {
         background-position: 0 0
     }
-}
-
-.progress {
-    overflow: hidden;
-    height: 22px;
-    margin-bottom: 22px;
-    background-color: #f5f5f5;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1)
-}
-
-.progress-bar {
-    float: left;
-    width: 0;
-    height: 100%;
-    font-size: 12px;
-    line-height: 22px;
-    color: #fff;
-    text-align: center;
-    background-color: #3097d1;
-    -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
-    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
-    -webkit-transition: width .6s ease;
-    transition: width .6s ease
-}
-
-.progress-bar-striped, .progress-striped .progress-bar {
-    background-image: linear-gradient(45deg, hsla(0, 0%, 100%, .15) 25%, transparent 0, transparent 50%, hsla(0, 0%, 100%, .15) 0, hsla(0, 0%, 100%, .15) 75%, transparent 0, transparent);
-    background-size: 40px 40px
-}
-
-.progress-bar.active, .progress.active .progress-bar {
-    -webkit-animation: progress-bar-stripes 2s linear infinite;
-    animation: progress-bar-stripes 2s linear infinite
-}
-
-.progress-bar-success {
-    background-color: #2ab27b
-}
-
-.progress-striped .progress-bar-success {
-    background-image: linear-gradient(45deg, hsla(0, 0%, 100%, .15) 25%, transparent 0, transparent 50%, hsla(0, 0%, 100%, .15) 0, hsla(0, 0%, 100%, .15) 75%, transparent 0, transparent)
-}
-
-.progress-bar-info {
-    background-color: #8eb4cb
-}
-
-.progress-striped .progress-bar-info {
-    background-image: linear-gradient(45deg, hsla(0, 0%, 100%, .15) 25%, transparent 0, transparent 50%, hsla(0, 0%, 100%, .15) 0, hsla(0, 0%, 100%, .15) 75%, transparent 0, transparent)
-}
-
-.progress-bar-warning {
-    background-color: #cbb956
-}
-
-.progress-striped .progress-bar-warning {
-    background-image: linear-gradient(45deg, hsla(0, 0%, 100%, .15) 25%, transparent 0, transparent 50%, hsla(0, 0%, 100%, .15) 0, hsla(0, 0%, 100%, .15) 75%, transparent 0, transparent)
-}
-
-.progress-bar-danger {
-    background-color: #bf5329
-}
-
-.progress-striped .progress-bar-danger {
-    background-image: linear-gradient(45deg, hsla(0, 0%, 100%, .15) 25%, transparent 0, transparent 50%, hsla(0, 0%, 100%, .15) 0, hsla(0, 0%, 100%, .15) 75%, transparent 0, transparent)
 }
 
 .media {
