--- a/views/web/errors/404.html
+++ b/views/web/errors/404.html
@@ -20,7 +20,7 @@
 <div class="container">
 <div class="row">
     <h2>Server Error: 404 (Not Found)</h2>
-        <!-- <h6>{{{ .message }}}</h6> -->
+        <h6>{{{ .message }}}</h6>
     <hr>
     <h3>What does this mean?</h3>
     <p>We couldn't find the page you requested on our servers. We're really sorry about that. It's our fault, not yours.
