--- a/views/web/topic/_topic_list.html
+++ b/views/web/topic/_topic_list.html
@@ -31,7 +31,7 @@
 </a>
     <span> • </span>
     <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
-<span class="timeago" title="最后活跃于">{{{ $topic.UpdatedAt }}}</span>
+<span class="timeago" title="最后活跃于">{{{ date $topic.UpdatedAt "Y-m-d H:i:s" }}}</span>
 </div>
 
 </div>
