--- a/views/web/topic/edit.html
+++ b/views/web/topic/edit.html
@@ -7,45 +7,35 @@
 <div class="panel-body">
     <h2 class="text-center">
         <i class="glyphicon glyphicon-edit"></i>
-        {{{ if .topic.id }}}
         编辑话题
-        {{{ else }}}
-        新建话题
-        {{{ end }}}
     </h2>
 
     <hr>
 
     {{{ template "web/common/error.html" }}}
-
-    {{{ if .topic.id }}}
-        <form action="/topics/update/{{{ .topic.id }}}" method="POST" accept-charset="UTF-8">
-    @else
-        <form action="/topics/save/" method="POST" accept-charset="UTF-8" class="formAjax">
-    {{{ end }}}
-
+        <form action="/topics/update" method="POST" accept-charset="UTF-8" class="formAjax">
             {{{ .xsrf_html }}}
 
         <div class="form-group">
-                <input class="form-control" type="text" name="title" value="{{{ if .topic.title }}} {{{ .topic.title }}}{{{ end }}}" placeholder="请填写标题" required/>
+                <input class="form-control" type="text" name="title" value="{{{ .topic.Title }}}" placeholder="请填写标题" required/>
         </div>
 
         <div class="form-group">
         <select class="form-control" name="category_id" required>
                 <option value="" hidden disabled>请选择分类</option>
             {{{ range $index, $category := .categories }}}
-                <option value="{{{ $category.Id }}}" {{{ if eq $.topic.categoryId $category.Id}}} selected {{{ end }}}>{{{ $category.Name }}}</option>
+                <option value="{{{ $category.Id }}}" {{{ if eq $.topic.CategoryId $category.Id}}} selected {{{ end }}}>{{{ $category.Name }}}</option>
             {{{ end }}}
         </select>
         </div>
 
-<div class="form-group" id="editor-md">
-<textarea name="body" class="form-control" id="editor" rows="3" placeholder="请填入至少三个字符的内容。" required>
-    {{{if .topic.body }}} {{{ end }}}
-</textarea>
-</div>
+    <div class="form-group" id="editor-md">
+        {{{ template "web/layouts/simditor.html" .}}}
+    </div>
 
     <div class="well well-sm">
+        <input type="hidden" name="id" value="{{{ .topic.Id }}}">
+        <input type="hidden" name="user_id" value="{{{ .topic.UserId }}}">
         <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> 保存</button>
     </div>
 </form>
