--- a/views/web/topic/index.html
+++ b/views/web/topic/index.html
@@ -10,8 +10,8 @@
 
                 <div class="panel-heading">
                     <ul class="nav nav-pills">
-                        <li class="{{{ if ne .order "recent"  }}}active{{{ end }}}"><a href="/topics?order=default">最后回复</a></li>
-                        <li class="{{{ if eq .order "recent" }}}active{{{ end }}}"><a href="/topics?order=recent">最新发布</a></li>
+                        <li class='{{{ if ne .order "recent"  }}}active{{{ end }}}'><a href="/topics?order=default">最后回复</a></li>
+                        <li class='{{{ if eq .order "recent" }}}active{{{ end }}}'><a href="/topics?order=recent">最新发布</a></li>
                     </ul>
                 </div>
 
