--- a/views/web/layouts/header.html
+++ b/views/web/layouts/header.html
@@ -42,11 +42,11 @@
 <div class="collapse navbar-collapse" id="app-navbar-collapse">
     <!-- Left Side Of Navbar -->
     <ul class="nav navbar-nav">
-        <li class="active"><a href="/topics">话题</a></li>
-        <li><a href="/categories/show/1">分享</a></li>
-        <li><a href="/categories/show/2">教程</a></li>
-        <li><a href="/categories/show/3">问答</a></li>
-        <li><a href="/categories/show/4">公告</a></li>
+        <li {{{ if eq .category_active 0}}}class="active"{{{end}}}><a href="/topics">话题</a></li>
+        <li {{{ if eq .category_active 1}}}class="active"{{{end}}}><a href="/categories/show/1">分享</a></li>
+        <li {{{ if eq .category_active 2}}}class="active"{{{end}}}><a href="/categories/show/2">教程</a></li>
+        <li {{{ if eq .category_active 3}}}class="active"{{{end}}}><a href="/categories/show/3">问答</a></li>
+        <li {{{ if eq .category_active 4}}}class="active"{{{end}}}><a href="/categories/show/4">公告</a></li>
     </ul>
 
     <!-- Right Side Of Navbar -->
